# experiments

./: .gitignore  .gitmodules  AGENTS.md  README.md
analog-tape-model-walkthrough/: README.md  _summary.md  analog_tape_tools.py  demo.md  notes.md
audio-io-recorder/: README.md  chatgpt-transcript.txt  separate_audio_recorder.py
cli-tools-pattern/: README.md  _summary.md  notes.md  pyproject.toml
cli-tools-pattern/src/cli_tools_demo/: __init__.py  cli.py
code-walkthrough/: README.md  notes.md  walkthrough.md
datasette-doltlite/: README.md  demo.md  launch_datasette.py  notes.md  pyproject.toml
db-portfolio-comparison/: README.md  demo.md  dolt_demo.py  mongodb_demo.py  notes.md  postgres_demo.py  pyproject.toml
jsonforms-pydantic-demo/: README.md  _summary.md  demo.md  notes.md
llm-classification-app/: .gitignore  README.md  _summary.md  app.py  demo.md  notes.md  pyproject.toml  testing.ipynb  todo.md  walkthrough.md
llm-classification-app/backend/: arena.py  batch.py  classifier.py  feedback.py  fuzzy_match.py  llm_prices.json  models.py  pricing.py  prompt.py
llm-classification-app/src/llm_classifier/: app.py  arena.py  batch_manager.py  classification.py  config.py  models.py  prompt_builder.py  vertex_client.py
llm-classification-app/tests/: test_batch.py  test_fuzzy_match.py  test_pricing.py  test_prompt.py
posit-connect-agent-chat-trio/: README.md  notes.md
posit_connect_static_tool_test/: README.md  _summary.md  app.py  notes.md  posit_connect_static_tool_stress_test_single_html.html
pydantic-jsonforms-demo/: README.md  _summary.md  app.py  notes.md  pyproject.toml  schema.py
readme-summaries-setup/: README.md  _summary.md  notes.md
security-review-20260307/: README.md  notes.md
shiny-python-skill-best-practice/: README.md  _summary.md  notes.md
(+58 files in other folders)
