[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-tools-demo"
version = "0.1.0"
description = "Demo package with multiple CLI entry points."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
hello-world = "cli_tools_demo.cli:hello_world"
goodbye-world = "cli_tools_demo.cli:goodbye_world"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
