[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-classifier"
version = "0.1.0"
description = "LLM-based classification app using Vertex AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shiny>=1.2.0",
    "pandas>=2.0.0",
    "rapidfuzz>=3.0.0",
    "google-cloud-aiplatform>=1.60.0",
    "anthropic[vertex]>=0.40.0",
    "google-cloud-bigquery>=3.0.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "faicons>=0.2.2",
    "shinyswatch>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
llm-classifier = "llm_classifier.app:main"

[tool.setuptools.packages.find]
where = ["src"]
